# wgpu-playground

./: Cargo.toml
assets/: custom_material.wgsl
src/: main.rs
