[package]
name = "wgsl-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
egui = "0.21.0"
enum-map = { version = "2", features = ["serde"] }
wgpu = "0.15.1"
futures = "0.3.27"